--- a/index.html
+++ b/index.html
@@ -447,29 +447,6 @@
 		transform: scale(1.07);
 	}
 
-    #afterTaxRate, #afterCommissionRate {
-        background-color: rgba(255, 156, 51, 0.1); /* 添加淡橙色背景 */
-        color: #ffffff; /* 確保文字為白色 */
-        font-weight: bold; /* 文字加粗 */
-        font-size: 18px; /* 增加字體大小 */
-        border: 1px solid var(--button-orange); /* 使用橙色邊框 */
-        box-shadow: inset 0 0 4px rgba(255, 156, 51, 0.2); /* 內部陰影效果 */
-        text-shadow: 0 0 2px rgba(255, 255, 255, 0.5); /* 文字發光效果 */
-    }
-
-    /* 當這些輸入框具有警告樣式時 */
-    #afterTaxRate.warning-text, #afterCommissionRate.warning-text {
-        background-color: rgba(255, 0, 0, 0.1); /* 紅色背景 */
-        border-color: #ff0000;
-        box-shadow: inset 0 0 6px rgba(255, 0, 0, 0.3);
-    }
-
-    /* 當獲得焦點時 */
-    #afterTaxRate:focus, #afterCommissionRate:focus {
-        transform: scale(1.05);
-        box-shadow: 0 0 0 3px rgba(255, 156, 51, 0.3), inset 0 0 4px rgba(255, 156, 51, 0.2);
-    }
-
     .value-changed {
         animation: valueChange 0.5s ease-out;
         will-change: background-color;
@@ -511,35 +488,15 @@
 	
 	.row button {
         background-color: var(--secondary-color);
-        color: rgba(255, 255, 255, 0.6); /* 降低文字明度 */
-        border: 1px solid var(--border-color);
+        color: #888888; /* 降低文字亮度 */
+        border: 1px solid #444444; /* 更深的邊框顏色 */
         padding: 3px 8px;
         margin: 0 5px;
         border-radius: 4px;
         cursor: pointer;
         transition: all 0.3s ease;
-        font-size: 16px;
-        position: relative;
-        overflow: hidden;
-        opacity: 0.8; /* 降低整體不透明度 */
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2); /* 添加輕微陰影 */
-        will-change: transform, opacity;
-        backface-visibility: hidden;
-        transform: translateZ(0);
-    }
-
-    .row button:hover {
-        background-color: var(--hover-color);
-        color: rgba(255, 255, 255, 0.8); /* 懸停時提高明度 */
-        opacity: 1;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    }
-
-    .row button:active {
-        transform: scale(0.95) translateY(1px);
-        transition: transform 0.1s;
-        opacity: 1;
-        color: white;
+        font-size: 15px;
+        opacity: 0.8;
     }
 
     /* 統一按鈕區域中的按鈕樣式 */
@@ -578,6 +535,18 @@
         gap: 2px;             /* 減小按鈕之間的間距 */
     }
 
+    .row button:hover {
+        background-color: #4a4a4a; /* 稍微亮一點的灰色 */
+        color: #cccccc; /* 亮一點的文字，但不是純白 */
+        border-color: #555555;
+        opacity: 0.9;
+    }
+
+    .row button:active {
+        background-color: var(--secondary-color);  /* 點擊時恢復原本顏色 */
+        color: var(--text-color);
+        border-color: var(--button-grey);
+    }
 	.row button::after {
 		content: '';
 		position: absolute;
@@ -623,26 +592,22 @@
 
     div[id$="Buttons"] button {
         background-color: var(--secondary-color);
-        color: var(--button-orange);
-        border: 2px solid var(--button-orange); /* 增加邊框寬度 */
+        color: #999999; /* 降低文字亮度，從橙色改為灰色 */
+        border: 1px solid #555555; /* 將邊框從橙色改為淺灰色 */
         padding: 4px 9px;
         margin: 0 4px;
-        border-radius: 10px; /* 增加圓角 */
+        border-radius: 4px;
         cursor: pointer;
-        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-        font-size: 16px;
-        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3); /* 添加陰影效果 */
-        height: 32px; /* 設定固定高度 */
-        min-height: 30px; /* 設定最小高度 */
-        position: relative;
-        overflow: hidden;
+        transition: all 0.3s ease;
+        font-size: 15px;
+        opacity: 0.85;
     }
 
-    div[id$="Buttons"] button:active {
-        transform: scale(0.95) translateY(1px);
-        transition: transform 0.1s;
-        background-color: var(--button-orange);
-        color: white;
+    div[id$="Buttons"] button:hover {
+        background-color: #555555; /* 改為淺灰色而非橙色 */
+        color: #ffffff;
+        transform: translateY(-1px);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
 	div[id$="Buttons"] button:active {
@@ -762,8 +727,8 @@
     .function-buttons {
         display: flex;
         flex-direction: column;
-        gap: 10px;
-        margin: 15px 0;
+        gap: 8px; /* 減少間隔 */
+        margin: 10px 0; /* 減少上下外邊距 */
         padding: 0 5px;
     }
 
@@ -830,12 +795,12 @@
 
     /* 主要操作按鈕樣式 */
     .function-buttons .main-action-btn {
-        background-color: var(--secondary-color);  /* 改為暗灰色背景 */
-        color: var(--text-color);                  /* 保持白色文字 */
-        padding: 10px 0;                           /* 降低高度從14px改為10px */
+        background-color: var(--secondary-color);
+        color: var(--text-color);
+        padding: 8px 0; /* 調整上下內邊距 */
         font-weight: bold;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);  /* 減少橙色陰影 */
-        border: 1px solid var(--border-color);      /* 添加邊框 */
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        border: 1px solid var(--border-color);
         transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     }
 
@@ -1393,6 +1358,30 @@
         box-shadow: 0 2px 10px rgba(0,0,0,0.2);
         opacity: 1;
         transition: opacity 0.5s ease;
+    }
+
+    /* 讓「稅佣後利率」輸入框更明顯 */
+    #afterCommissionRate {
+        font-weight: bold;
+        color: #ffffff;
+        background-color: #2a2a2a;
+        border: 1px solid #666666;
+        box-shadow: 0 0 3px rgba(255, 156, 51, 0.2);
+    }
+
+    #afterCommissionRate.value-changed {
+        animation: afterRateChange 0.8s ease-out;
+    }
+
+    @keyframes afterRateChange {
+        0% { 
+            background-color: rgba(255, 156, 51, 0.3);
+            transform: scale(1.03);
+        }
+        100% { 
+            background-color: #2a2a2a;
+            transform: scale(1);
+        }
     }
 
 </style>
